@@ -1,27 +1,16 @@
 from jinja2 import Environment, FileSystemLoader
 from os import path
-from yaml import SafeLoader, safe_load
+from sys import argv
+from yaml import safe_load
 
-CASES_FILENAME    = 'printf_fmt.yml'
-TEMPLATE_FILENAME = 'printf_fmt_gen.jinja'
-TEST_FILENAME     = 'test_printf_fmt_gen.c'
-
-ROOT_DIRPATH = path.dirname(path.dirname(path.join(path.abspath(__file__))))
-
-COMMON_DIRPATH = path.join(ROOT_DIRPATH, 'common')
-TESTS_DIRPATH  = path.join(ROOT_DIRPATH, 'tests')
-
-CASES_FILEPATH = path.join(COMMON_DIRPATH, CASES_FILENAME)
-TEST_FILEPATH  = path.join(TESTS_DIRPATH, TEST_FILENAME)
-
-def main():
-    cases = safe_load(open(CASES_FILEPATH))
+def main(test_filepath, template_filepath, cases_filepath):
+    cases = safe_load(open(cases_filepath))
 
     jinja_env = Environment(
         keep_trailing_newline=True,
-        loader=FileSystemLoader(TESTS_DIRPATH),
+        loader=FileSystemLoader(path.dirname(template_filepath)),
     )
-    jinja_template = jinja_env.get_template(TEMPLATE_FILENAME)
+    jinja_template = jinja_env.get_template(path.basename(template_filepath))
 
     result = jinja_template.render(
         cases=cases,
@@ -31,7 +20,7 @@ def main():
         none_to_zero=none_to_zero,
     )
 
-    with open(TEST_FILEPATH, 'w') as f:
+    with open(test_filepath, 'w') as f:
         f.write(result)
 
 def escape_flag(flag):
@@ -56,4 +45,21 @@ def none_to_zero(num):
         return str(num)
 
 if __name__ == '__main__':
-    main()
+    print(argv)
+
+    template_filepath = argv[1]
+    cases_filepath    = argv[2]
+    test_filepath     = argv[3]
+
+    print('test_filepath:     %s' % test_filepath)
+    print('template_filepath: %s' % template_filepath)
+    print('cases_filepath:    %s' % cases_filepath)
+
+    if path.exists(test_filepath) and not path.isfile(test_filepath):
+        raise RuntimeError('invalid test file path')
+    if not path.isfile(template_filepath):
+        raise RuntimeError('invalid template file path')
+    if not path.isfile(cases_filepath):
+        raise RuntimeError('invalid cases file path')
+
+    main(test_filepath, template_filepath, cases_filepath)
