@@ -1,6 +1,7 @@
 2022-12-05  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* configure.ac: Fix a bug with building for a freestanding environment
+	* tests/Makefile.am: Fix checks in out-of-root builds
 
 2022-12-04  Alex Kotov  <kotovalexarian@gmail.com>
 
